# self-modifying-elf-prototype

./: Cargo.toml  LICENSE  Readme.md  build.sh  build_debug.sh  out.txt  readme.entry  webdev.sh
add/: Cargo.toml
command_add/: Cargo.toml  cmd.entry
command_add/src/: main.rs
command_export/: Cargo.toml  cmd.entry
command_web/: Cargo.toml  cmd.entry
command_web/src/: main.rs  util.rs
command_web/src/resources/: hash.rs
command_web/static/: static.entry
command_web/static/css/: main.css
command_web/static/old_maybe_reuse/: index.html  index0.js  test.html
ipc/: Cargo.toml
ipc/ipc_derive/: Cargo.toml
ipc/ipc_derive/src/: lib.rs
ipc/src/: lib.rs
loader/: loader.c
ls_route/: Cargo.toml
microwiki/: Cargo.toml
microwiki/src/: main.rs  prelude.rs
microwiki/src/core/: file.rs  hash.rs  mod.rs
microwiki/src/runner/: elf_util.rs  mod.rs
microwiki/src/util/: directory_overlay.rs
microwiki_derive/: Cargo.toml
microwiki_derive/src/: lib.rs
overlay/: cmd.entry
overlay/util/add/: Cargo.toml  cmd.entry
overlay/util/add/src/: main.rs
overlay/util/export/: Cargo.toml  cmd.entry
overlay/util/ls_route/: Cargo.toml  cmd.entry
overlay/util/web/: Cargo.toml  cmd.entry
plugin/: Cargo.toml
plugin/src/: lib.rs
plugin/src/data/: hash_ref.rs  mod.rs
plugin/src/interface/: mod.rs  rw.rs
src/: main.rs  prelude.rs
src/core/: entry.rs  file.rs  hash.rs  routes.rs
src/runner/: mod.rs
src/util/: directory_overlay.rs  mod.rs
web/: Cargo.toml
web/src/: main.rs
web/src/resources/: index.rs
web/static/: index.css  index.html
(+30 files in other folders)
