[package]
name = "microwiki"
version = "0.1.0"
authors = ["CodeSteak <codesteak@shellf.art>"]
edition = "2018"

[dependencies]
microwiki_derive = {path = "./microwiki_derive"}
ipc = {path = "./ipc"}
lazy_static = "1.2.0"
nix = "0.13"
serde = { version = "1.0", features = ["derive", "rc"] }
blake2-rfc = "0.2.18"
plugin = {path = "./plugin"}
notify = "4.0.0"

[profile.release]
lto = true