[package]
name = "add"
version = "0.1.0"
authors = ["CodeSteak <codesteak@shellf.art>"]
edition = "2018"

[dependencies]
ipc = { path = "../../../ipc" }
plugin = { path = "../../../plugin" }
structopt = { version = "0.2", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'